tests/coverage/misc/fail/negative/011_duplicate_default_in_switch.js
// ECMA-262 §14.12.1 — a SwitchStatement with more than one DefaultClause
// is a SyntaxError regardless of strict/sloppy mode.
switch (x) {
	case 1:
		break;
	default:
		break;
	default:
		break;
}
